fix: create linebreak at correct position and decrease letter spacing

--- a/pages/welcome/welcome.module.css
+++ b/pages/welcome/welcome.module.css
@@ -20,8 +20,8 @@
 	font-size: 3.6rem;
 	font-weight: 900;
 	line-height: 120%;
-	letter-spacing: 0.2em;
-	width: 17rem;
+	letter-spacing: 0.07em;
+	width: 21rem;
 	color: var(--quarternaryText);
 }
 
